--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,12 @@
 .App {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-light{
-    color:#232127;
+.App-light {
+  color: #232127;
 }
 
-.App-dark{
-    color:#e5e3e8;
+.App-dark {
+  background-color: #232127;
+  color: #e5e3e8;
 }
